@@ -2,20 +2,28 @@ package faang.school.postservice.repository;
 
 import faang.school.postservice.exception.EntityNotFoundException;
 import faang.school.postservice.model.Comment;
-import faang.school.postservice.model.Post;
-import org.springframework.data.jpa.repository.JpaRepository;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.repository.Query;
 import org.springframework.data.repository.CrudRepository;
 
 import java.util.List;
 
-public interface CommentRepository extends JpaRepository<Comment, Long> {
+public interface CommentRepository extends CrudRepository<Comment, Long> {
 
     @Query("SELECT c FROM Comment c WHERE c.post.id = :postId")
-    List<Comment> findAllByPostId(long postId);
+    Page<Comment> findAllByPostId(Long postId, Pageable pageable);
 
-    default Comment getByIdOrThrow(long commentId) {
-        return findById(commentId)
-                .orElseThrow(() -> new EntityNotFoundException(String.format("Comment %d not found", commentId)));
+
+    @Query(value = """
+            SELECT * FROM comment 
+            WHERE is_verified IS NULL 
+            FOR UPDATE SKIP LOCKED
+            """, nativeQuery = true)
+    List<Comment> findCommentsByVerifiedIsNull();
+
+    default Comment findByIdOrThrow(Long id) {
+        return findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("Comment not found %d".formatted(id)));
     }
 }
